--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><i class="fa fa-map-marker-alt me-3"></i>PamaTravel TH</TH></h1>
+                <h1 class="text-primary m-0"><i class="fa fa-map-marker-alt me-3"></i>PamaTravel TH</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -100,7 +100,12 @@
         <div class="container-fluid bg-primary py-5 mb-5 hero-header">
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
-                    <img src="img/logo.png" alt="Logo" class="img-fluid" style="max-width: 70%; height: auto;">    
+                    <!-- place logo in its own full-width column and center it -->
+                    <div class="col-12 text-center mb-3">
+                        <img src="img/logo.png" alt="Logo" class="img-fluid hero-logo mx-auto"
+                             style="max-width: 70%; height: auto;"
+                             onerror="this.style.display='none'; console.warn('Logo not found: img/logo.png');">
+                    </div>
                     <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
                         <p class="fs-4 text-white mb-4 animated slideInDown">Explore the World with us</p>
                         <div class="position-relative w-75 mx-auto animated slideInDown">
