--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
         </nav>
 
         <div class="container-fluid bg-primary py-5 mb-5 hero-header">
-            <!-- centered logo positioned absolutely over the hero background -->
-            <img src="img/logo.png" alt="Logo" class="hero-logo position-absolute top-50 start-50 translate-middle"
-                 onerror="this.style.display='none'; console.warn('Logo not found: img/logo.png');">
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
                     <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
-                         <p class="fs-4 text-white mb-4 animated slideInDown">Explore the World with us</p>
+                        <!-- logo placed inline with the header text; size controlled by CSS % -->
+                        <img src="img/logo.png" alt="Logo" class="hero-logo-inline mb-3"
+                             onerror="this.style.display='none'; console.warn('Logo not found: img/logo.png');">
+                        <p class="fs-4 text-white mb-4 animated slideInDown">Explore the World with us</p>
                          <div class="position-relative w-75 mx-auto animated slideInDown">
                              <input class="form-control border-0 rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Eg: Thailand">
                              <button type="button" class="btn btn-primary rounded-pill py-2 px-4 position-absolute top-0 end-0 me-2" style="margin-top: 7px;">Search</button>
